--- a/Web Application/index.html
+++ b/Web Application/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
 </head>
 
 <body>
@@ -73,7 +75,7 @@
           <th scope="col">Expected Return Time</th>
         </tr>
       </thead>
-      <tbody id="empTableBody">
+      <tbody id="employeeTableBody">
       </tbody>
     </table>
     <div class="d-flex justify-content-between">
@@ -81,9 +83,8 @@
       <button id="in" class="px-3 posBtn">In</button>
     </div>
 
-
+    <!--input table with driver info-->
     <h2 class="text-center h4 mb-4">Schedule Delivery</h2>
-
     <table class="table table-hover table-bordered">
       <thead>
         <tr>
@@ -97,20 +98,34 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
+          <td scope="row">
+            <div class="dropdown">
+              <button class="btn dropdown-toggle" type="button" id="vehicleDropdown" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Vehicle
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="vehicleDropdown">
+                <li><a class="dropdown-item" onclick="selectVehicle('car')"><i class="bi bi-car-front"></i></a>
+                </li>
+                <li><a class="dropdown-item" onclick="selectVehicle('bike')"><i class="bi bi-bicycle"></i></a>
+                </li>
+              </ul>
+            </div>
+            <input type="hidden" id="selectedVehicle" value="">
+          </td>
+          <td><input type="text" id="nameInput" required></td>
+          <td><input type="text" id="surnameInput" required></td>
+          <td><input type="text" id="telephoneInput" required></td>
+          <td><input type="text" id="addressInput" required></td>
+          <td><input type="text" id="returnTimeInput" required></td>
         </tr>
-
       </tbody>
     </table>
     <div class="d-flex justify-content-end">
-      <button class="posBtn">Add</button>
+      <button class="posBtn" onclick="saveInput()">Add</button>
     </div>
 
+    <!--display driver info from javascript-->
     <h2 class="text-center h4 mb-4">Delivery Board</h2>
     <table class="table table-hover table-bordered">
       <thead>
@@ -123,39 +138,25 @@
           <th scope="col">Return time</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-        </tr>
+      <tbody id="outputTableBody">
       </tbody>
     </table>
     <div class="d-flex justify-content-end">
-      <button class="negBtn">Clear</button>
+      <button class="negBtn" onclick="clearDeliveries()">Clear</button>
     </div>
 
-    <div class="d-flex justify-content-end me-4 mt-4">
+    <div id="liveToastBtn"></div>
+
+    <div class=" d-flex justify-content-end me-4 mt-4">
       <h4 id="currentTime">Current Time</h4>
     </div>
 
   </div>
 
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-
   <script src="js/wdt_app.js"></script>
 </body>
 
