--- a/Web Application/index.html
+++ b/Web Application/index.html
@@ -52,7 +52,6 @@
     </div>
   </nav>
 
-  <!--border border-dark border-2 mt-4-->
   <div class="container">
     <div class="container d-flex">
       <img class="ms-3" src="image/Company logo.png" alt="logo" width="200" height="150">
@@ -82,7 +81,6 @@
       <button id="in" class="px-3 greenBtn">In</button>
     </div>
 
-    <!--input table with driver info-->
     <h2 class="text-center h4 mb-4">Schedule Delivery</h2>
     <table class="table table-hover table-bordered">
       <thead>
@@ -124,7 +122,6 @@
       <button class="greenBtn" onclick="addDelivery()">Add</button>
     </div>
 
-    <!--display driver info from javascript-->
     <h2 class="text-center h4 mb-4">Delivery Board</h2>
     <table class="table table-hover table-bordered">
       <thead>
@@ -145,17 +142,12 @@
     </div>
 
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-
-    </div>
-
+    <div class="toast-container position-fixed bottom-0 end-0 p-3"></div>
 
     <div class=" d-flex justify-content-end me-4 mt-4">
       <h4 id="currentTime">Current Time</h4>
     </div>
-
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
